Added font size variables and border variables

--- a/variables.less
+++ b/variables.less
@@ -1,11 +1,20 @@
+//text and background colors
 @overlay-background-color: #3B3838;
 @heading-color: #050500;
 @lowercase-color: #050500;
 @heading-color: #EE252F;
 @text-color: #050500;
 
+//text colors
 @light-gray: #F3F3F3;
 @yellow: #F8DF1F;
 @red: #EE252F;
 @black: #080801;
 
+//font sizes
+@heading-font: 30px;
+@paragraph-font: 16px;
+@link-font: 18px;
+
+//border 
+@border-radius: 8px;
