Edited multiple pages

--- a/main.less
+++ b/main.less
@@ -1,1 +1,20 @@
 @import "variables.less";
+
+
+ul {
+    background-color: @background-color;
+    padding: 40px;
+}
+
+li {
+    display: inline;
+    padding-right: 10px;
+}
+
+button {
+    background-color: @yellow;
+    font: @link-font;
+    color: @black;
+    border-radius: @border-radius;
+}
+
