--- a/variables.less
+++ b/variables.less
@@ -4,6 +4,7 @@
 @lowercase-color: #050500;
 @heading-color: #EE252F;
 @text-color: #050500;
+@background-color: #F8DF1F;
 
 //text colors
 @light-gray: #F3F3F3;
