Made multiple changes to pages

--- a/main.less
+++ b/main.less
@@ -1,6 +1,10 @@
 @import "variables.less";
 
 
+span {
+    font: @red;
+}
+
 ul {
     background-color: @background-color;
     padding: 40px;
@@ -8,7 +12,8 @@ ul {
 
 li {
     display: inline;
-    padding-right: 10px;
+    padding-left: 15px;
+    padding-right: 30px;
 }
 
 button {
@@ -18,3 +23,9 @@ button {
     border-radius: @border-radius;
 }
 
+footer {
+    display: flex;
+    justify-content: center;
+    padding: 30px;
+    background-color: @lowercase-color;
+}
