--- a/main.less
+++ b/main.less
@@ -2,7 +2,7 @@
 
 
 span {
-    font: @red;
+    color: @red;
 }
 
 ul {
@@ -16,10 +16,13 @@ li {
     padding-right: 30px;
 }
 
+.background-image {
+    background: @overlay-background-color;
+}
+
 button {
     background-color: @yellow;
     font: @link-font;
-    color: @black;
     border-radius: @border-radius;
 }
 
