Edited main page

--- a/main.less
+++ b/main.less
@@ -26,6 +26,21 @@ button {
     border-radius: @border-radius;
 }
 
+.section2 {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.part1 {
+    width: 67%;
+}
+
+.part2 {
+    width: 33;
+    padding: 20px;
+}
+
 footer {
     display: flex;
     justify-content: center;
