Edited home page

--- a/main.less
+++ b/main.less
@@ -32,14 +32,23 @@ button {
     flex-direction: row;
 }
 
-.part1 {
-    width: 67%;
+.section3 {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    background-color: @light-gray;
 }
 
-.part2 {
+.part1, .part4 {
+    width: 67%;
+    padding: 20px;
+}
+
+.part2, .part3 {
     width: 33;
     padding: 20px;
 }
+
 
 footer {
     display: flex;
