--- a/main.less
+++ b/main.less
@@ -34,11 +34,17 @@ button {
     border-radius: @border-radius;
 }
 
-/*.section1 button {
+.section1 {
     display: flex;
-    justify-content: center;
-    flex-direction: row;
-}*/
+}
+
+.section5 {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    padding: 20px;
+}
 
 .section2 {
     display: flex;
@@ -53,10 +59,10 @@ button {
     background-color: @light-gray;
 }
 
-.section5 {
+/*.main-logo {
     display: flex;
     justify-content: center;
-}
+}*/
 
 .part1, .part4 {
     width: 67%;
@@ -75,3 +81,10 @@ footer {
     padding: 30px;
     background-color: @lowercase-color;
 }
+
+/*@media (min-width: 350px) {
+
+    header {
+        width: 100%;
+    }
+}*/
